--- a/public/personal_manager.ejs
+++ b/public/personal_manager.ejs
@@ -97,7 +97,7 @@ body {
         <table class="table table-striped table-bordered">
             <tbody>
                 <tr>
-                    <td colspan="3">
+                    <td colspan="4">
                         <a class="btn btn-success" href="/admin/personal_manager/personal_editor">Добавить сотрудника</a>
                     </td>
                 </tr>
@@ -116,6 +116,9 @@ body {
                                     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"></path>
                                 </svg>
                             </a>
+                            <td style="width: 60px;">
+                                <a href="/admin/personal_manager/personal_delete?worker_id=<%= worker.id%>"  class="btn btn-danger">X&nbsp;</a>                               </a>
+                            </td>
                         </td>
                     </tr>
                 <% }); %>
