--- a/public/tables.ejs
+++ b/public/tables.ejs
@@ -134,6 +134,7 @@ body {
                                     <p><%= table.name %>:<%= i+1 %></p>
                                     <p><%= orders[index].name %></p>
                                     <p><%= orders[index].sum %> руб.</p>
+                                    <p><%= orders[index].guests_count ? orders[index].guests_count + ' чел.': ''%></p>
                                 </button>
                             </div>
 
