--- a/public/upmenu_crm.ejs
+++ b/public/upmenu_crm.ejs
@@ -9,7 +9,7 @@
                         </svg>
                         Продажа
                     </a>
-                  <a title="Выйти" href="index.php?class_name=users&amp;act=logout" class="btn btn-danger">&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                  <a title="Выйти" href="/auth/logout" class="btn btn-danger">&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
                     <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
                   </svg>&nbsp;</a>		
@@ -25,7 +25,8 @@
                                   Настройки
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=printer&amp;act=draw_prechek" class="text-body" title="Печатаем всё">Затянуть из СБИС</a></li>
+                                    
+                                    <!-- <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=printer&amp;act=draw_prechek" class="text-body" title="Печатаем всё">Затянуть из СБИС</a></li>
                             
                                     <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=cennik&amp;act=start" title="Ценники и Эткетки">Ценники и Эткетки</a></li>
                             
@@ -37,7 +38,7 @@
                             
                                     <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=cleardb&amp;act=clear_db" title="Очистка базы данных">Очистка базы данных</a></li>
                             
-                                    <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=uchet&amp;act=export_to_site" title="Экспорт на сайт">Экспорт на сайт</a></li>       
+                                    <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=uchet&amp;act=export_to_site" title="Экспорт на сайт">Экспорт на сайт</a></li>        -->
                                 </ul>
                             </li>
                                         
@@ -48,12 +49,12 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" tabindex="-1" href="/admin/tables" title="Обслуживание столиков">Обслуживание столиков</a></li>
                             
-                                    <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=clients&amp;act=view_clients" title="Все клиенты">Все клиенты</a></li>
+                                    <!-- <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=clients&amp;act=view_clients" title="Все клиенты">Все клиенты</a></li> -->
                                 
                                 </ul>
                             </li>
                                     
-                            <li class="dropdown">
+                            <!-- <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     Склады
                                 </a>
@@ -67,9 +68,9 @@
                                     <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=u_pereuch" title="Инвентаризация">Инвентаризация</a></li>
                                             
                                 </ul>
-                            </li>
+                            </li> -->
                                     
-                            <li class="dropdown">
+                            <!-- <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     Расходы
                                 </a>
@@ -79,18 +80,18 @@
                                     <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=spis" title="Затраты и списание продуктов">Затраты и списание продуктов</a></li>
                                             
                                 </ul>
-                            </li>
+                            </li> -->
                                     
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     Отчеты
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=agent_history" title="Движение денег, товаров">Движение денег, товаров</a></li>
+                                    <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=agent_history" title="Движение денег, товаров">Движение денег, товаров</a></li> -->
                             
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/stats" title="Аналитика продаж">Аналитика продаж</a></li>
                             
-                                    <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=ostatki" title="Текущий  баланс">Текущий  баланс</a></li>
+                                    <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=ostatki" title="Текущий  баланс">Текущий  баланс</a></li> -->
                                 </ul>
                             </li>
                                     
@@ -99,27 +100,27 @@
                                     Справочники
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=admin_postav&amp;act=view_postav" title="Поставщики">Поставщики</a></li>
-                                    <li><hr class="dropdown-divider"></li>	
+                                    <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=admin_postav&amp;act=view_postav" title="Поставщики">Поставщики</a></li>
+                                    <li><hr class="dropdown-divider"></li> -->
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/personal_manager" title="Персонал">Персонал</a></li>
                                     <li><hr class="dropdown-divider"></li>	
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/categories_manager" title="Производства">Производства</a></li>
                             
-                                    <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=catalog&amp;act=draw1" title="Мастер рецептов">Мастер рецептов</a></li>
+                                    <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=catalog&amp;act=draw1" title="Мастер рецептов">Мастер рецептов</a></li> -->
                             
-                                    <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=admin_sklads&amp;act=view_sklads" title="Склады">Склады</a></li>
+                                    <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=admin_sklads&amp;act=view_sklads" title="Склады">Склады</a></li> -->
                             
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/pos_manager" title="Места продаж">Места продаж</a></li>
                                     <li><hr class="dropdown-divider"></li>	
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/nomenclature?type=raw" title="Исходные товары">Исходные товары</a></li>
                             
-                                    <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=receptura&amp;act=Fas" title="Фасовка">Фасовка</a></li>
+                                    <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=receptura&amp;act=Fas" title="Фасовка">Фасовка</a></li> -->
                             
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/nomenclature?type=semis" title="Полуфабрикаты">Полуфабрикаты</a></li>
                             
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/nomenclature?type=production" title="Продукция">Продукция</a></li>
                                     <li><hr class="dropdown-divider"></li>	
-                                    <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=print_menu" title="Просмотр технологических карт">Просмотр технологических карт</a></li>
+                                    <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=print_menu" title="Просмотр технологических карт">Просмотр технологических карт</a></li> -->
                                             
                                 </ul>
                             </li>
